<resources>
    <string name="app_name">Dialer SideMaster</string>
    <string name="action_settings">Settings</string>
    <string name="b1">1</string>
    <string name="b2">2</string>
    <string name="b3">3</string>
    <string name="b4">4</string>
    <string name="b5">5</string>
    <string name="b6">6</string>
    <string name="b7">7</string>
    <string name="b8">8</string>
    <string name="b9">9</string>
    <string name="b0">0</string>
    <string name="bn">#</string>
    <string name="ba">*</string>
    <string name="ll">Llamar</string>
   <string name="c">C</string>
</resources>
